fix: tooltip text always light; location text wraps instead of overflowing

--- a/_sass/_cv.scss
+++ b/_sass/_cv.scss
@@ -78,7 +78,8 @@ a.btncv:hover {
 
 p.location {
   font-size: 0.7rem;
-  white-space: nowrap;
+  white-space: normal;
+  word-break: break-word;
 }
 
 i.iconlocation {
